--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,14 @@
 #spring.datasource.url=jdbc:postgresql://localhost/datanor
 #spring.datasource.username=postgres
 #spring.datasource.password=Parool11
-# spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # H2 CONF
 spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.h2.console.enabled=true
+
+# APPLIES TO BOTH
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
