--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.h2.console.enabled=true
 
 # APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+
+# VARIABLES
+datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
+datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
