Added separate application.properties for testing

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,10 @@
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=Parool11
 spring.h2.console.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 
+# VARIABLES
+datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
+datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
