Added CityEntity.java, updated Weather API, added logging for Hibernate

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 
+# HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 
