--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -1,9 +1,28 @@
 # H2 CONF ONLY
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=Parool11
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=Parool11
+#spring.h2.console.enabled=true
+
+
+# TESTCONTAINERS
+
+#spring.datasource.url=jdbc:tc:postgresql:latest:///postgres  // Töötab aeglaselt (5 min timeout)
+
+# kõik ülejäänu ei mõjuta
+
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+#spring.datasource.url=jdbc:tc:postgresql:latest://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=Parool11
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+#spring.jpa.open-in-view=false
+
+# APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 
 # VARIABLES
