Migra from Maven to Gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DOCKER CONF
-spring.datasource.url=jdbc:postgresql://pg:5432/dn_project
-spring.datasource.username=postgres
-spring.datasource.password=docker
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://pg:5432/dn_project
+#spring.datasource.username=postgres
+#spring.datasource.password=docker
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # POSTGRE CONF
@@ -12,11 +12,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 # H2 CONF
-#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 
 # APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
