--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,12 @@ hs_err_pid*
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
+!gradle/wrapper/gradle-wrapper.jar
+!/build/libs/
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+.gradle
 
 ### STS ###
 .apt_generated
