--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:3.10.3'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:2.3.4.RELEASE'
     runtimeOnly 'org.postgresql:postgresql:42.2.18'
+    def junitJupiterVersion = '5.7.0'
+    testCompile "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
+    testCompile "org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
+    testCompile "org.testcontainers:testcontainers:1.15.1"
+    testCompile "org.testcontainers:junit-jupiter:1.15.1"
+    testCompile "org.testcontainers:postgresql:1.15.1"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.0'
 }
