--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -7,19 +7,18 @@
 
 
 # TESTCONTAINERS
+logging.level.root=DEBUG
 
-#spring.datasource.url=jdbc:tc:postgresql:latest:///postgres  // Töötab aeglaselt (5 min timeout)
+spring.datasource.url=jdbc:tc:postgresql:latest:///postgres
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 
 # kõik ülejäänu ei mõjuta
-
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 #spring.datasource.url=jdbc:tc:postgresql:latest://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=Parool11
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 #spring.jpa.open-in-view=false
 
 # APPLIES TO BOTH
