--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
+    jcenter()
 }
 
 dependencies {
@@ -27,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.0'
     implementation 'org.liquibase:liquibase-core:3.10.3'
     implementation 'org.springframework.boot:spring-boot-configuration-processor:2.3.4.RELEASE'
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
     runtimeOnly 'org.postgresql:postgresql:42.2.18'
     def junitJupiterVersion = '5.7.0'
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
