application.properties files updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.h2.console.enabled=true
 # APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 
+# HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # VARIABLES
 datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
-datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
+datanor.weatherMap.appid=ee79985160c3f57db1038830809a44e0
