--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-# POSTGRE CONF
+# LOCAL POSTGRE CONF
 #spring.datasource.url=jdbc:postgresql://localhost/datanor
 #spring.datasource.username=postgres
 #spring.datasource.password=Parool11
@@ -11,14 +11,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 
-# HIBERNATE
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# APPLIES TO BOTH
-spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-
-# VARIABLES
-datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
-datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
-  #spring.profiles.active=dev
+#spring.profiles.active=dev
