--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testCompile "org.testcontainers:testcontainers:1.15.1"
     testCompile "org.testcontainers:junit-jupiter:1.15.1"
     testCompile "org.testcontainers:postgresql:1.15.1"
+    testCompile('com.github.fridujo:rabbitmq-mock:1.1.1')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.0'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
