Rabbit to docker

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 
 #spring.profiles.active=dev
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
