--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '7.0.0.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.0'
     implementation 'org.mockito:mockito-core:3.6.0'
     implementation 'com.h2database:h2:1.4.200'
