refactored tracked_cities to user_cities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
 spring.h2.console.enabled=true
 
 # APPLIES TO BOTH
@@ -27,4 +27,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # VARIABLES
 datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
-datanor.weatherMap.appid=ee79985160c3f57db1038830809a44e0
+datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
