--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,14 +17,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
-
 # APPLIES TO BOTH
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-
 # HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 # VARIABLES
-datanor.weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
-datanor.weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
+weatherMap.url=http://api.openweathermap.org/data/2.5/weather?units=metric
+weatherMap.appid=0c78a76af15cc5843caa7b5f44e1623e
